--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/three": "^0.144.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
+    "protoc-gen-grpc-web": "^1.4.1",
     "tailwindcss": "^3.2.2"
   }
 }
